# databricks_ecommerce

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: cd-workflow.yml  ci-workflow.yml
ecommerce/notebooks/dea03-etl-apache-spark/: 01. Set-up Project Environment.ipynb  03. Extract Orders Data - Complex JSON as Text.ipynb  07. Extract Refunds Data - via JDBC.ipynb  10. Transform Customers Data.ipynb  15. Query Orders Data - JSON Strings.ipynb  16. Transform Orders Data - String to JSON.ipynb  20. User Defined Functions.ipynb  21. Higher Order Functions.ipynb
ecommerce_etl/notebooks/00_init/: 01. Set-up Project Environment.ipynb
ecommerce_etl/notebooks/01_bronze/: 02. Extract Customers Data - JSON.ipynb  03. Extract Orders Data - Complex JSON as Text.ipynb  05. Extract Addresses Data - CSV via read_files Function.ipynb  06. Extract Payments Data - CSV via External Table.ipynb  07. Extract Refunds Data - via JDBC.ipynb
ecommerce_etl/notebooks/02_silver/: 10. Transform Customers Data.ipynb  11. Transform Payments Data.ipynb  12. Transform Refunds Data.ipynb  14. Transform Addresses Data.ipynb  16. Transform Orders Data - String to JSON.ipynb  17. Transform Orders Data - Explode Arrays.ipynb
ecommerce_etl/notebooks/03_gold/: 18. Join Customer Address.ipynb  19. Monthly Order Summary.ipynb
ecommerce_etl/notebooks/04_streaming/: 01. Ingest Customers Stream.ipynb
ecommerce_etl/notebooks/06_functions/: 20. User Defined Functions.ipynb  21. Higher Order Functions.ipynb
ecommerce_etl/notebooks/07_extras/: 08. Extract Data using PySpark Methods.ipynb  09. Data Profiling.ipynb  15. Query Orders Data - JSON Strings.ipynb
ecommerce_etl/notebooks/dea03-etl-apache-spark/: 01. Set-up Project Environment.ipynb  02. Extract Customers Data - JSON.ipynb  05. Extract Addresses Data - CSV via read_files Function.ipynb  08. Extract Data using Python.ipynb  09. Data Profiling.ipynb  11. Transform Payments Data.ipynb  12. Transform Refunds Data.ipynb  14. Transform Addresses Data.ipynb  17. Transform Orders Data - Explode Arrays.ipynb  18. Join Customer Address.ipynb  19. Monthly Order Summary.ipynb
ecommerce_etl/scripts/00_init/: 01_setup_proj_env.py  01_setup_secrets.sh
ecommerce_etl/scripts/01_bronze/: 02_extract_customers_data_json.py  03_extract_orders_data_complex_json.py  (+4 more)
resources/: ecommerce_etl_pipeline_py.job.yml
src/ecommerce/: __init__.py  main.py
src/utils/: datetime_utils.py
tests/: conftest.py  test_datetime_utils.py
(+11 files in other folders)
