[project]
name = "databricks_ecommerce"
version = "0.0.1"
authors = [{ name = "qadam2602@gmail.com" }]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecommerce"]


[project.scripts]
main = "ecommerce.main:main"
